crates/qubit-macros/tests/ui/attribute-name-multiple.rs
use qubit_macros::handler;

#[handler(query, name = "other_handler", name = "different_name")]
async fn my_handler() {}

fn main() {}
